--- a/env/.env.prod
+++ b/env/.env.prod
@@ -17,3 +17,7 @@ REDIS_PORT=6379
 # aws (bucket中间只能用横线，不允许重名)
 AWS_BUCKET_NAME=nest-demo-bucket
 AWS_REGION=ap-northeast-1
+
+# rate limit
+RATE_TTL=60
+RATE_LIMIT=10
