--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@nestjs/platform-express": "^9.2.1",
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^6.1.4",
+    "@nestjs/throttler": "^4.0.0",
     "@nestjs/websockets": "^9.2.1",
     "@prisma/client": "^4.9.0",
     "apollo-server-express": "^3.11.1",
@@ -67,10 +68,12 @@
     "class-validator": "^0.14.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "csurf": "^1.11.0",
     "express-session": "^1.17.3",
     "graphql": "^16.6.0",
     "graphql-subscriptions": "^2.0.0",
     "handlebars": "^4.7.7",
+    "helmet": "^6.0.1",
     "js-yaml": "^4.1.0",
     "less": "^4.1.3",
     "nodemailer": "^6.9.0",
